infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: taf.dev
      http:
        paths:
          - path: /api/v1/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-clusterip-srv
                port:
                  number: 3000
          - path: /api/v1/product/?(.*)
            pathType: Prefix
            backend:
              service:
                name: product-clusterip-srv
                port:
                  number: 3000
          - path: /api/v1/order/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-clusterip-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
